--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-spinners": "0.13.8"
@@ -24,6 +25,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vitejs/plugin-react-swc": "3.0.0",
+    "sass": "^1.80.6",
     "vite": "4.2.0"
   }
 }
